# invoicegen

./: .gitignore  .vercelignore  ACTION-PLAN.md  Cargo.toml  FULL-AUDIT-REPORT.md  GEO-ANALYSIS.md  LICENSE  Package.swift  README.md  SEO-ANALYSIS.md  SEO-BACKLINK-ROADMAP.md  SEO-BACKLINK-TRACKER.csv  SEO-SERP-BASELINE.md  SEO-SUBMISSION-PACK.md  SKILL.md  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: publish.yml  release-cli.yml  release.yml
Formula/: invoicegen.rb
RustTests/: rust_cli_contract.rs
Sources/InvoiceCore/: InvoiceExportNaming.swift  InvoiceTextRenderer.swift  LocalInvoiceStore.swift  Models.swift  Money.swift  SampleData.swift
Tests/InvoiceCoreTests/: InvoiceCoreTests.swift
Tests/InvoiceGenAppTests/: AppModelBindingTests.swift  InvoiceAutoGenerationIntervalInputTests.swift  InvoiceListLayoutArchitectureTests.swift  InvoiceMailAppleScriptTests.swift  InvoiceMailDraftTests.swift  InvoiceMailtoURLTests.swift  InvoiceSummaryRowContentTests.swift  MoneyTextFieldFormatterTests.swift
npm/invoicegen-darwin-arm64/: package.json
npm/invoicegen-darwin-x64/: package.json
npm/invoicegen-linux-arm64/: package.json
npm/invoicegen-linux-x64/: package.json
script/: build_and_run.sh  build_cli_release.mjs  build_site.mjs  package_release.sh  publish_npm_packages.mjs  render_homebrew_formula.mjs  stage_npm_packages.mjs  verify_cli_packaging.mjs  verify_site_seo.mjs
site/: index.html  llms.txt  robots.txt  styles.css
src/: cli.rs  domain.rs  json.rs  lib.rs  main.rs  store.rs
(+51 files in other folders)
