[package]
name = "invoicegen-rs"
version = "0.1.7"
edition = "2021"
description = "Local-first invoice generation CLI for InvoiceGen"
license = "Apache-2.0"
homepage = "https://invoicegen.megabyte.sh/cli"
repository = "https://github.com/megabyte0x/invoicegen"
readme = "README.md"

[lib]
name = "invoicegen_rs"
path = "src/lib.rs"

[[bin]]
name = "invoicegen-rs"
path = "src/main.rs"

[[test]]
name = "rust_cli_contract"
path = "RustTests/rust_cli_contract.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
